test/testdata/functions/declaration/missing_1_arg_error.lox
fun add(a, b) {
  print a + b;
}

add(1); // error: add() missing 1 argument: b
